--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,25 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyBajVQjv3stLyM7Sbz-O514GO1bKpVkalY",
+      authDomain: "tiktok-clone-fb368.firebaseapp.com",
+      projectId: "tiktok-clone-fb368",
+      storageBucket: "tiktok-clone-fb368.appspot.com",
+      messagingSenderId: "144806866864",
+      appId: "1:144806866864:web:54944566bd98765d1df075"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
